// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxLines renders 0 1`] = `
Array [
  .c0 {
  max-lines: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maxLines renders function 1`] = `
Array [
  .c0 {
  max-lines: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: has;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maxLines renders invalid theme path 1`] = `
Array [
  .c0 {
  max-lines: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maxLines renders negative number 1`] = `
Array [
  .c0 {
  max-lines: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maxLines renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  max-lines: July;
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-lines: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  max-lines: July;
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-lines: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  max-lines: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-lines: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-lines: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-lines: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-lines: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxLines renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    max-lines: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-lines: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    max-lines: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-lines: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-lines: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-lines: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-lines: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-lines: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-lines: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxLines renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  max-lines: July;
}

@media May {
  .c0 {
    max-lines: August;
  }
}

@media April {
  .c0 {
    max-lines: September;
  }
}

@media January {
  .c0 {
    max-lines: November;
  }
}

@media April {
  .c0 {
    max-lines: August;
  }
}

@media June {
  .c0 {
    max-lines: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  max-lines: July;
}

@media May {
  .c0 {
    max-lines: August;
  }
}

@media April {
  .c0 {
    max-lines: September;
  }
}

@media January {
  .c0 {
    max-lines: November;
  }
}

@media April {
  .c0 {
    max-lines: August;
  }
}

@media June {
  .c0 {
    max-lines: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  max-lines: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-lines: November;
  }
}

@media April {
  .c0 {
    max-lines: January;
  }
}

@media January {
  .c0 {
    max-lines: December;
  }
}

@media April {
  .c0 {
    max-lines: April;
  }
}

@media June {
  .c0 {
    max-lines: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-lines: November;
  }
}

@media April {
  .c0 {
    max-lines: January;
  }
}

@media January {
  .c0 {
    max-lines: December;
  }
}

@media April {
  .c0 {
    max-lines: April;
  }
}

@media June {
  .c0 {
    max-lines: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxLines renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    max-lines: July;
  }
}

@media April {
  .c0 {
    max-lines: August;
  }
}

@media January {
  .c0 {
    max-lines: September;
  }
}

@media April {
  .c0 {
    max-lines: November;
  }
}

@media June {
  .c0 {
    max-lines: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    max-lines: July;
  }
}

@media April {
  .c0 {
    max-lines: August;
  }
}

@media January {
  .c0 {
    max-lines: September;
  }
}

@media April {
  .c0 {
    max-lines: November;
  }
}

@media June {
  .c0 {
    max-lines: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-lines: January;
  }
}

@media April {
  .c0 {
    max-lines: December;
  }
}

@media January {
  .c0 {
    max-lines: April;
  }
}

@media April {
  .c0 {
    max-lines: May;
  }
}

@media June {
  .c0 {
    max-lines: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-lines: January;
  }
}

@media April {
  .c0 {
    max-lines: December;
  }
}

@media January {
  .c0 {
    max-lines: April;
  }
}

@media April {
  .c0 {
    max-lines: May;
  }
}

@media June {
  .c0 {
    max-lines: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxLines renders postitive number 1`] = `
Array [
  .c0 {
  max-lines: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maxLines renders string 1`] = `
Array [
  .c0 {
  max-lines: July;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: July;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: June;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maxLines renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`maxLines renders valid theme path 1`] = `
Array [
  .c0 {
  max-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
